crates/core/tests/snapshots/general__unexpected_token_2.snap
---
source: crates/core/tests/general.rs
expression: "err.pretty_print(false, code, \"<code>\")"
---
error: Invalid token
 --> <code>:1:1
  |
1 | "
  | ^

